--- a/server/views/editarfornecedor.ejs
+++ b/server/views/editarfornecedor.ejs
@@ -4,6 +4,8 @@
      
       <meta charset="utf-8">
       <title>Editar Fornecedor</title>
+      <link href="https://stackpath.bootstrapcdn.com/bootstrap/4.1.3/css/bootstrap.min.css" rel="stylesheet">
+      <script src="https://stackpath.bootstrapcdn.com/bootstrap/4.1.3/js/bootstrap.bundle.min.js" type="text/javascript"></script>
       <link href="https://fonts.googleapis.com/css?family=Raleway" rel="stylesheet">
       <link href="/stylesheets/reset.css" rel="stylesheet" type="text/css">
       <link href="/stylesheets/forms.css" rel="stylesheet" type="text/css">
