--- a/server/views/relatorios.ejs
+++ b/server/views/relatorios.ejs
@@ -2,9 +2,13 @@
 <html>
 <head>
 <meta charset="utf-8">
+
+<link href="https://stackpath.bootstrapcdn.com/bootstrap/4.1.3/css/bootstrap.min.css" rel="stylesheet">
+<script src="https://stackpath.bootstrapcdn.com/bootstrap/4.1.3/js/bootstrap.bundle.min.js" type="text/javascript"></script>
 <link href="/stylesheets/reset.css" rel="stylesheet" type="text/css">
 <link href="/stylesheets/menu.css" type="text/css" rel="stylesheet">
 <link href="/stylesheets/estilo_home.css" rel="stylesheet" type="text/css">
+
 <link href="https://fonts.googleapis.com/css?family=Raleway" rel="stylesheet"> 
 <link rel="stylesheet" href="https://use.fontawesome.com/releases/v5.4.2/css/all.css" integrity="sha384-/rXc/GQVaYpyDdyxK+ecHPVYJSN9bmVFBvjA/9eOB+pb3F2w2N6fc5qB9Ew5yIns" crossorigin="anonymous">
 <script type="text/javascript" src="/javascripts/script.js"></script>
@@ -26,15 +30,39 @@
 
       <div id="conteudo">
       <h1>Relatórios</h1>
-    Produtos Mais Vendidos
-    Produtos Menos Vendidos
-    Produtos com Estoque Minimo
-    Produtos com Estoque Máximo
-    Consumo de Produto
-    Gastos Pessoais
-    Gastos da Loja
-    Todos fornecedores
+   
+   
 
+
+     <div class="click-grid">
+       <div class="step">1</div>
+
+     <form>
+        <label class="click-grid__legend">Escolha uma opção: </label>           
+        
+        <div class="click-grid__box">
+        <input type = "radio" name = "reportControl" id ="item1" class="click-grid__input" value = "1" checked = "checked" />
+        <label for = "item1" class="click-grid__label">Produtos Mais Vendidos</label>
+        </div>
+
+        <div class="click-grid__box">
+        <input type = "radio" name = "reportControl"  id = "item2" class="click-grid__input"  value = "2" />
+        <label for = "item2" class="click-grid__label">Produtos Menos Vendidos</label>
+</div>
+<div class="click-grid__box">
+        <input type = "radio" name = "reportControl" id = "item3" class="click-grid__input"  value = "3" />
+        <label for = "item3" class="click-grid__label">Produtos com Estoque Minimo</label>
+</div>
+<div class="click-grid__box">
+        <input type = "radio" name = "reportControl" id = "item4" class="click-grid__input"  value = "4" />
+        <label for = "item4" class="click-grid__label">Produtos com Estoque Máximo</label>
+</div>
+<div class="click-grid__box">
+        <input type = "radio" name = "reportControl" id = "item5" class="click-grid__input"  value = "5" />
+        <label for = "item5" class="click-grid__label"> Consumo de Produto</label>
+        </div>
+   </form>
+  </div>
    
 
       </div>
