--- a/server/views/menu.ejs
+++ b/server/views/menu.ejs
@@ -17,9 +17,8 @@
             <a id="itemConf2" href="" class="lnkBranco"><i class="fas fa-truck"></i></i>&nbsp;Fornecedores</a>
             <ul class="lstSubMenu2 submenu" >
               <li><a href="/novofornecedor" class="lnkSubItem subitem" > Novo Fornecedor</a> </li>
-              <li><a href="#" class="lnkSubItem subitem" > Editar Fornecedor</a> </li>
               <li><a href="#" class="lnkSubItem subitem" > Pesquisar Fornecedor</a> </li>
-              <li><a href="/listafornecedores" class="lnkSubItem subitem" > Lista de Fornecedores </a> </li>
+              <li><a href="/listafornecedores" class= ubItem subitem" > Lista de Fornecedores </a> </li>
             </ul>
           </li>
     
