--- a/server/views/relatorios.ejs
+++ b/server/views/relatorios.ejs
@@ -3,14 +3,14 @@
 <head>
 <meta charset="utf-8">
 
+<link href="https://fonts.googleapis.com/css?family=Raleway" rel="stylesheet">
+<script src="https://ajax.googleapis.com/ajax/libs/jquery/1.10.2/jquery.min.js" type="text/javascript"></script>
 <link href="https://stackpath.bootstrapcdn.com/bootstrap/4.1.3/css/bootstrap.min.css" rel="stylesheet">
 <script src="https://stackpath.bootstrapcdn.com/bootstrap/4.1.3/js/bootstrap.bundle.min.js" type="text/javascript"></script>
 <link href="/stylesheets/reset.css" rel="stylesheet" type="text/css">
 <link href="/stylesheets/menu.css" type="text/css" rel="stylesheet">
 <link href="/stylesheets/estilo_home.css" rel="stylesheet" type="text/css">
 <link href="/stylesheets/relatorios.css" type="text/css" rel="stylesheet">
-
-
 <link href="https://fonts.googleapis.com/css?family=Raleway" rel="stylesheet"> 
 <link rel="stylesheet" href="https://use.fontawesome.com/releases/v5.4.2/css/all.css" integrity="sha384-/rXc/GQVaYpyDdyxK+ecHPVYJSN9bmVFBvjA/9eOB+pb3F2w2N6fc5qB9Ew5yIns" crossorigin="anonymous">
 <link rel="stylesheet" href="https://use.fontawesome.com/releases/v5.4.2/css/all.css" integrity="sha384-/rXc/GQVaYpyDdyxK+ecHPVYJSN9bmVFBvjA/9eOB+pb3F2w2N6fc5qB9Ew5yIns" crossorigin="anonymous">
@@ -23,22 +23,22 @@
 <body> 
   <%- include('menu'); %>
   
-    <div id="barraIdentificacao">
-        <div id="logo"></div>
-        <div id="conteudoId"> Olá, <b><span id="lblLogado">  <%= usuario %> </span></b> <span>|</span> <a href="">Alterar Senha</a> <span>|</span>
-          <button type="button" id="btnSair"> Sair</button>
-        </div>
-      </div>
+  <div id="barraIdentificacao">
+    <div id="logo"></div>
+    <div id="conteudoId"> Olá, <b><span id="lblLogado">  <%= usuario %> </span></b> <span>|</span> <a href="">Alterar Senha</a> <span>|</span>
+      <button type="button" id="btnSair"> Sair</button>
+    </div>
+  </div>
 
       <div id="conteudo">
       <h1>Relatórios</h1>
       
    
 
-      
+    <div id="acao">
      <div class="click-grid">
        <div class="step">1</div>
-       <form action="/relatorios/do">
+       <form id="myform" action="/relatorios/do">
   
         <label class="click-grid__legend"><span>Escolha uma opção: </span></label>           
         
@@ -72,36 +72,64 @@
       
         <div class="click-grid__box">
         <label for="data_inicio">De:</label>
-        <input type="date" name="data_inicio"><br>
+        <input type="date" class="data_inicio" name="data_inicio" required ><br>
       </div>
   
       <div class="click-grid__box">
         <label for="data_final">Até:</label>
-        <input type="date" name="data_final">
+        <input type="date" class="data_final" name="data_final" required>
       </div>
 
       <button id="btnAvancar">Avançar</button>
+      <div class="erro"></div>
 
 
-      <div class="msg_erro"></div>
-     
     </form>
     </div>
- 
+  </div>
       </div>
+
+
       </body>
       <script>
-      
-      document.getElementById('btnAvancar').addEventListener('click', function(){
-      
-      let tipoRel= document.getElementsByName('reportControl');
-      for (let i=0; i<=tipoRel.length; i++){
-        let selecionado=[];
-        selecionado.push(tipoRel[i].)
+       
+    var form = document.querySelector('#myform');
+    var botao = document.querySelector('#btnAvancar');
+    var erro= document.querySelector('.erro');
 
-      }
+      botao.addEventListener('click', function(e){
+        e.preventDefault();
+
+        /*if(!form.data_inicio.value && !form.data_final.value ){
+
+          form.data_inicio.style.background="#ff8080";
+          form.data_final.style.background="#ff8080";
+          erro.innerHTML="Escolha um período";
+
+        }*/
+
+       if(!form.data_inicio.value){
         
-      })
+          erro.innerHTML="Escolha uma data de partida!";
+          }
+
+       if(!form.data_final.value){
+       
+          erro.innerHTML="Escolha uma data final!";
+
+          }
+$.ajax({
+  url:'/relatorios/relatorio',
+  method:'get',
+  success: function(data){
+    $('#acao').html(data);
+  }
+
+})
+
+      });
+      
+
       
       </script>
 
