Add relatorio EstoqueMaximo

--- a/server/views/menu.ejs
+++ b/server/views/menu.ejs
@@ -25,6 +25,8 @@
           <li>
             <a id="itemConf3" href="" class="lnkBranco"><i class="far fa-clipboard"></i> &nbsp;Relatórios</a>
             <ul class="lstSubMenu3 submenu" >
+                <li><a href="/relatorios" class="lnkSubItem subitem" > Relatórios </a> </li>
+
               <li><a href="" class="lnkSubItem subitem" > Produtos sem estoque </a> </li>
               <li><a href="#" class="lnkSubItem subitem" > Mais Vendidos </a> </li>
               <li><a href="#" class="lnkSubItem subitem" > Menos Vendidos </a> </li>
