--- a/server/views/relatorio.ejs
+++ b/server/views/relatorio.ejs
@@ -25,6 +25,7 @@
           <tbody>
     
     </table>
-    
+    <button id="btnGeraPdf" onclick="geraPdf('<%= produtos %>')">Salvar como Pdf</button>
+    <button id="btnInprimir" >Imprimir</button>
 
 </div>
