--- a/server/views/menu.ejs
+++ b/server/views/menu.ejs
@@ -27,8 +27,8 @@
             <ul class="lstSubMenu3 submenu" >
                 <li><a href="/relatorios" class="lnkSubItem subitem" > Relatórios </a> </li>
 
-              <li><a href="" class="lnkSubItem subitem" > Produtos sem estoque </a> </li>
-              <li><a href="#" class="lnkSubItem subitem" > Mais Vendidos </a> </li>
+              <li><a href="/relatorios/relatorio/todosprodutos" class="lnkSubItem subitem" > Todos os produtos </a> </li>
+              <li><a href="/relatorios/relatorio/todosfornecedores" class="lnkSubItem subitem" > Todos os fornecedores </a> </li>
               <li><a href="#" class="lnkSubItem subitem" > Menos Vendidos </a> </li>
               <li><a href="#" class="lnkSubItem subitem" > Produtos Comprados </a> </li>
             </ul>
