--- a/public/stylesheets/tabela.css
+++ b/public/stylesheets/tabela.css
@@ -4,8 +4,8 @@
 	vertical-align: bottom;
 	border-right: 1px solid #ced4da;
 	border-bottom: 1px solid #ced4da;
-	color: #fff;
-	background-color: #FD5286;
+	color: #000;
+	background-color: #ffe6ed;
 }
 
 .table tbody td {
@@ -49,3 +49,4 @@ td a{color:#000;
 	width: inherit;
 }
 
+#link_fornecedor{color:#000; text-align: center}
